--- a/st2packs-builder/Dockerfile
+++ b/st2packs-builder/Dockerfile
@@ -1,4 +1,4 @@
 FROM stackstorm/st2:3.0dev
 
 ONBUILD ARG PACKS
-ONBUILD RUN : docker build ${PACKS:? --build-arg PACKS="https://github.com/harsh6100/stackstorm-email.git" .}
+ONBUILD RUN docker build --build-arg PACKS="https://github.com/harsh6100/stackstorm-email.git" .}
