--- a/st2packs-builder/Dockerfile
+++ b/st2packs-builder/Dockerfile
@@ -1,4 +1,4 @@
 FROM stackstorm/st2:3.0dev
 
 ONBUILD ARG PACKS
-ONBUILD RUN docker build --build-arg PACKS="https://github.com/sangrah92/hello_sensor.git" -t stackstorm/st2packs:sanchit .
+ONBUILD RUN docker build --build-arg PACKS="https://github.com/sangrah92/api_call.git" -t stackstorm/st2packs:sanchit .
