--- a/st2packs-builder/Dockerfile
+++ b/st2packs-builder/Dockerfile
@@ -1,4 +1,4 @@
 FROM stackstorm/st2:3.0dev
 
 ONBUILD ARG PACKS
-ONBUILD RUN docker build --build-arg PACKS="https://github.com/sangrah92/pack_actions.git" -t ishan2411/st2packs:latest .
+ONBUILD RUN docker build --build-arg PACKS="https://PRIVATE-TOKEN:xYAf-6WELzmrhodb_3GY@scm.dimensiondata.com/pratik.khairnar/ntt_vmware.git" -t stackstorms/st2packs:latest .
