--- a/st2packs-builder/Dockerfile
+++ b/st2packs-builder/Dockerfile
@@ -1,4 +1,7 @@
 FROM stackstorm/st2:3.0dev
 
 ONBUILD ARG PACKS
-ONBUILD RUN docker build --build-arg PACKS="https://PRIVATE-TOKEN:xYAf-6WELzmrhodb_3GY@scm.dimensiondata.com/pratik.khairnar/ntt_vmware.git" -t stackstorms/st2packs:latest .
+ONBUILD RUN docker build --build-arg PACKS="https://PRIVATE-TOKEN:FWHZ_59xns-N4gF-BwaP@scm.dimensiondata.com/vnext/StackStorm-Packs/ntt_docker.git" -t stackstorms/st2packs:latest .
+
+
+
