--- a/st2packs-builder/Dockerfile
+++ b/st2packs-builder/Dockerfile
@@ -1,7 +1,7 @@
 FROM stackstorm/st2:3.0dev
 
 ONBUILD ARG PACKS
-ONBUILD RUN docker build --build-arg PACKS="https://PRIVATE-TOKEN:aEJFW8JRRZuaPt66ZYrt@scm.dimensiondata.com/vnext/StackStorm-Packs/ntt_network_patch.git" -t stackstorm/st2packs2:latest .
+ONBUILD RUN docker build --build-arg PACKS="https://PRIVATE-TOKEN:aEJFW8JRRZuaPt66ZYrt@scm.dimensiondata.com/vnext/StackStorm-Packs/ntt_vmware.git" -t stackstorm/custompack1:latest .
 
 
 
