--- a/st2packs-builder/Dockerfile
+++ b/st2packs-builder/Dockerfile
@@ -1,5 +1,5 @@
 FROM stackstorm/st2:3.0dev
 
 ONBUILD ARG PACKS
-ONBUILD RUN docker build --build-arg PACKS="https://PRIVATE-TOKEN:cqTqq9q12WDZJLkLztGU@scm.dimensiondata.com/vnext/StackStorm-Packs/ntt_backup.git https://PRIVATE-TOKEN:cqTqq9q12WDZJLkLztGU@scm.dimensiondata.com/vnext/StackStorm-Packs/ntt_discovery.git" -t stackstorm/custompack8:latest .
+ONBUILD RUN docker build --build-arg PACKS="https://PRIVATE-TOKEN:cqTqq9q12WDZJLkLztGU@scm.dimensiondata.com/vnext/StackStorm-Packs/ntt_ods.git" -t stackstorm/custompack9:latest .
 
